[package]
name = "mango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
flate2 = "1.0.27"
reqwest = "0.11.21"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["full"] }
